samples/_failures_safe/1761326289_3cff8b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_48910006.c: In function ‘main’:
./samples/SAFE/__tmp_48910006.c:153:9: error: expected expression at end of input
  153 |         if (choice ==
      |         ^~
./samples/SAFE/__tmp_48910006.c:153:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_48910006.c:153:9: error: expected declaration or statement at end of input
